Fixed the line-height on small buttons

--- a/src/resources/css/source/craft.scss
+++ b/src/resources/css/source/craft.scss
@@ -388,7 +388,7 @@ body.rtl .btngroup .btn:not(:last-child) { border-top-left-radius: 0; border-bot
 
 /* small buttons */
 .btngroup.small .btn,
-.btn.small { padding: 0 7px !important; font-size: 11px; line-height: 20px; }
+.btn.small { padding: 0 7px !important; font-size: 11px; line-height: 22px; }
 .btngroup.small,
 .btngroup.small input.btn,
 .btn.small,
